-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 23
-
Component/s: hotspot
The fix for the following bug:
JDK-8324840 windows-x64-slowdebug does not build anymore after JDK-8317572
is integrated in jdk-23+8-518.
However Mach5 Tier2 (where slowdebug build happen) still fails with:
[2024-01-29T15:13:06,020Z] Creating support/native/java.desktop/libjsound/static/jsound.lib from 17 file(s)
[2024-01-29T15:19:09,151Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(67): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:09,151Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(75): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:09,167Z] lib/CompileJvm.gmk:152: recipe for target '/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/static/logLevel.obj' failed
[2024-01-29T15:19:09,167Z] make[3]: *** [/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/static/logLevel.obj] Error 1
[2024-01-29T15:19:09,167Z] make[3]: *** Waiting for unfinished jobs....
[2024-01-29T15:19:10,558Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(67): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:10,558Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(75): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:10,558Z] make[3]: *** [/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/logLevel.obj] Error 1
[2024-01-29T15:19:10,558Z] lib/CompileJvm.gmk:152: recipe for target '/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/logLevel.obj' failed
[2024-01-29T15:19:10,558Z] make[3]: *** Waiting for unfinished jobs....
[2024-01-29T15:19:11,761Z] make/Main.gmk:261: recipe for target 'hotspot-server-static-libs' failed
[2024-01-29T15:19:11,761Z] make[2]: *** [hotspot-server-static-libs] Error 2
is integrated in jdk-23+8-518.
However Mach5 Tier2 (where slowdebug build happen) still fails with:
[2024-01-29T15:13:06,020Z] Creating support/native/java.desktop/libjsound/static/jsound.lib from 17 file(s)
[2024-01-29T15:19:09,151Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(67): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:09,151Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(75): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:09,167Z] lib/CompileJvm.gmk:152: recipe for target '/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/static/logLevel.obj' failed
[2024-01-29T15:19:09,167Z] make[3]: *** [/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/static/logLevel.obj] Error 1
[2024-01-29T15:19:09,167Z] make[3]: *** Waiting for unfinished jobs....
[2024-01-29T15:19:10,558Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(67): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:10,558Z] c:\sb\prod\1706540623\workspace\open\src\hotspot\share\utilities/stringUtils.hpp(75): error C3861: 'strtok_r': identifier not found
[2024-01-29T15:19:10,558Z] make[3]: *** [/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/logLevel.obj] Error 1
[2024-01-29T15:19:10,558Z] lib/CompileJvm.gmk:152: recipe for target '/cygdrive/c/sb/prod/1706540623/workspace/build/windows-x64-slowdebug/hotspot/variant-server/libjvm/objs/logLevel.obj' failed
[2024-01-29T15:19:10,558Z] make[3]: *** Waiting for unfinished jobs....
[2024-01-29T15:19:11,761Z] make/Main.gmk:261: recipe for target 'hotspot-server-static-libs' failed
[2024-01-29T15:19:11,761Z] make[2]: *** [hotspot-server-static-libs] Error 2
- relates to
-
JDK-8317572 C2 SuperWord: refactor/improve TraceSuperWord, replace VectorizeDebugOption with TraceAutoVectorization
-
- Resolved
-
-
JDK-8324840 windows-x64-slowdebug does not build anymore after JDK-8317572
-
- Closed
-